--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "@mezhevykh/reset-styles",
+  "name": "@mezhevykh/mini-css-framework",
   "version": "1.0.0",
+  "description": "$ npm i @mezhevykh/mini-css-framework",
   "style": "dist/main.css",
   "main": "dist/main.css",
   "author": "Evgeny Mezhevykh",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mezhevykh223571/mini-css-framework.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mezhevykh223571/mini-css-framework/issues"
+  },
+  "homepage": "https,://mezhevykh223571.github.io/mini-css-framework/",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
